# se-toolkit-lab-8

./: AGENTS.md  REPORT.md  docker-compose.yml
.agents/skills/observability/: SKILL.md
caddy/: Caddyfile
lab/tasks/required/: task-4.md
mcp/mcp_lms/: server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/nanobot-webchat/: pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
