[project]
name = "nanobot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "nanobot-ai",
    "lms-mcp",
    "nanobot-webchat",
]

[tool.uv.workspace]
members = [
    "nanobot-channel-protocol",
    "nanobot-webchat",
]

[tool.uv.sources]
lms-mcp = { path = "../mcp", editable = true }
nanobot-channel-protocol = { workspace = true }
nanobot-webchat = { workspace = true }
